# nessie-store

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  justfile  pyproject.toml
.githooks/: pre-push
.github/workflows/: ci.yml  release.yml
crates/nessie-ac-conformance/: Cargo.toml
crates/nessie-ac-conformance/src/: lib.rs
crates/nessie-backend-conformance/: Cargo.toml  README.md  pyproject.toml
crates/nessie-backend-conformance/examples/: python_backend.py
crates/nessie-backend-conformance/python/nessie_backend_conformance/: __init__.py  __init__.pyi
crates/nessie-backend-conformance/python/tests/: test_pybackend.py
crates/nessie-backend-conformance/src/: lib.rs  python.rs
crates/nessie-backend-core/: Cargo.toml  README.md  pyproject.toml
crates/nessie-backend-core/examples/: usage.py
crates/nessie-backend-core/python/nessie_backend_core/: __init__.py  __init__.pyi
crates/nessie-backend-core/python/tests/: test_smoke.py
crates/nessie-backend-core/src/: access.rs  action_cache.rs  action_result.rs  attestation.rs  attestation_set.rs  capabilities.rs  cas.rs  digest.rs  error.rs  hex.rs  ids.rs  lib.rs  python.rs  references.rs  router.rs  traits.rs  tree.rs  types.rs
crates/nessie-backend-core/tests/: proptest_roundtrip.rs
crates/nessie-backend-mem/: Cargo.toml  README.md  pyproject.toml
crates/nessie-backend-mem/examples/: usage.py
crates/nessie-backend-mem/python/nessie_backend_mem/: __init__.py  __init__.pyi
crates/nessie-backend-mem/python/tests/: test_smoke.py
crates/nessie-backend-mem/src/: lib.rs  python.rs
crates/nessie-backend-mem/tests/: ac_conformance.rs  cas_conformance.rs  conformance.rs
crates/nessie-backend-zfs/: Cargo.toml  README.md  pyproject.toml
crates/nessie-backend-zfs/examples/: usage.py
crates/nessie-backend-zfs/python/nessie_backend_zfs/: __init__.py  __init__.pyi
crates/nessie-backend-zfs/python/tests/: test_smoke.py
crates/nessie-backend-zfs/src/: lib.rs  python.rs  runner.rs  zfs.rs
crates/nessie-backend-zfs/tests/: live_zfs.rs
crates/nessie-cas-conformance/: Cargo.toml
crates/nessie-cas-conformance/src/: lib.rs
crates/nessie-cas-store/: Cargo.toml
crates/nessie-cas-store/src/: clock.rs  evict.rs  gc.rs  lib.rs  policy.rs  reach.rs  resolver.rs  roots.rs  store.rs
crates/nessie-nfs/: Cargo.toml  README.md
crates/nessie-nfs/src/: lib.rs  nonunix.rs  unix.rs
crates/nessie-nfs/tests/: passthrough.rs
crates/nessie-nfsserve/: Cargo.toml  README.md
crates/nessie-nfsserve/src/: fs_util.rs  lib.rs  mount_handlers.rs  nfs.rs  nfs_handlers.rs  rpc.rs  rpcwire.rs  tcp.rs  transaction_tracker.rs  vfs.rs  xdr.rs
crates/nessie-ontap-protocol/: Cargo.toml  README.md  pyproject.toml
crates/nessie-ontap-protocol/examples/: usage.py
crates/nessie-ontap-protocol/python/nessie_ontap_protocol/: __init__.py  __init__.pyi
crates/nessie-ontap-protocol/python/tests/: test_smoke.py
crates/nessie-ontap-protocol/src/: collection.rs  duration.rs  error.rs  job.rs  lib.rs  links.rs  python.rs  records.rs
crates/nessie-reapi/: Cargo.toml  build.rs
crates/nessie-reapi/src/: boundary.rs  config.rs  lib.rs  map.rs  proto.rs  resource.rs  server.rs  signer.rs  size.rs  status.rs
crates/nessie-reapi/src/services/: action_cache.rs  bytestream.rs  capabilities.rs  cas.rs  mod.rs
crates/nessie-store/: Cargo.toml  README.md  pyproject.toml
crates/nessie-store/examples/: usage.py
crates/nessie-store/python/nessie_store/: __init__.py  __init__.pyi
crates/nessie-store/python/tests/: test_smoke.py
crates/nessie-store/src/: auth.rs  blocking.rs  cas_node.rs  config.rs  error.rs  identity.rs  lib.rs  main.rs  python.rs  routes.rs  snapmirror.rs  snapshots.rs  state.rs  tls.rs  volumes.rs
crates/nessie-store/tests/: e2e_metadata.rs  e2e_snapmirror.rs  e2e_snapshots.rs  e2e_volumes.rs  replication_e2e.rs
deploy/: config.example.toml  environment.example  nessie-store.service
deploy/k8s/: deployment.yaml  kustomization.yaml  namespace.yaml  pv.example.yaml  pvc.yaml  secret.example.yaml  service.yaml
docs/: DEPLOY.md  DEPLOY_K8S.md  REPLICATION.md  STYLE_PYO3.md  STYLE_PYTHON.md  STYLE_RUST.md
docs/design/: demand-paged-nfs-gateways.md  embedded-nfs-hardening.md  membership-and-identity.md  p2p-cas-swarm.md  snapmirror-data-plane.md
formal/: .gitignore  README.md  check.sh
formal/lean/: Gc.lean  NessieFormal.lean  lake-manifest.json  lakefile.toml
formal/tla/: AcCrdt.cfg  AcCrdt.tla  AcCrdt_ByzThreshold.cfg  Eviction.cfg  Eviction.tla  Eviction_Unsafe.cfg  Gc.cfg  Gc.tla  Gc_Unguarded.cfg
scripts/: check-doc-drift.sh  docker-entrypoint.sh  install.sh  nessie-store-setup.sh
