[package]
name = "nessie-ac-conformance"
description = "Generic conformance suite every nessie-store ActionCacheBackend must pass."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
nessie-backend-core = { path = "../nessie-backend-core", version = "0.3.1" }
# Reused to assert an ActionCacheBackend does not regress the CAS contract of its
# CasBackend supertrait (the `it_is_also_a_cas` property).
nessie-cas-conformance = { path = "../nessie-cas-conformance", version = "0.3.1" }
