[package]
name = "nessie-backend-conformance"
description = "Generic conformance suites every nessie-store backend must pass."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
nessie-backend-core = { path = "../nessie-backend-core" }
