[package]
name = "nessie-backend-conformance"
description = "Generic conformance suites every nessie-store backend must pass."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# `python` adds the inside-extension surface: validate a Python-authored backend.
python = ["dep:pyo3", "dep:pythonize", "dep:serde"]

[dependencies]
nessie-backend-core = { path = "../nessie-backend-core" }
pyo3 = { workspace = true, optional = true, features = ["extension-module", "macros"] }
pythonize = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
