[package]
name = "nessie-backend-core"
description = "Core domain types and the storage-backend supertrait stack for nessie-store."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
proptest = { workspace = true }
uuid = { workspace = true }
