[package]
name = "nessie-backend-core"
description = "Core domain types and the storage-backend supertrait stack for nessie-store."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
# rlib for Rust consumers (the other crates link this); cdylib for the PyO3 wheel.
crate-type = ["cdylib", "rlib"]

[features]
# Opt-in Python bindings. OFF by default so Rust-only consumers never link pyo3.
python = ["dep:pyo3"]

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
# Face-A external bindings: the host CPython provides libpython, so PyO3 must NOT
# link it -> extension-module. abi3-py310 builds ONE stable-ABI wheel per platform
# that works on CPython 3.10+. Enabled only with the `python` feature.
pyo3 = { workspace = true, optional = true, features = ["extension-module", "macros", "abi3-py310"] }

[dev-dependencies]
serde_json = { workspace = true }
proptest = { workspace = true }
uuid = { workspace = true }
