[package]
name = "nessie-backend-mem"
description = "In-memory reference backend for nessie-store (HashMap; passes full conformance)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
python = ["dep:pyo3", "dep:pythonize", "dep:serde"]

[dependencies]
nessie-backend-core = { path = "../nessie-backend-core", version = "0.2.1" }
pyo3 = { workspace = true, optional = true, features = ["extension-module", "macros", "abi3-py310"] }
pythonize = { workspace = true, optional = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
nessie-backend-conformance = { path = "../nessie-backend-conformance", version = "0.2.1" }
