[package]
name = "nessie-backend-zfs"
description = "ZFS-backed storage backend for nessie-store (zfs/zpool/exportfs over a CommandRunner seam)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# Gated tier that runs the conformance suite against a REAL ZFS pool (needs
# privilege + a loopback pool); off by default so CI stays hermetic.
live-zfs = []
# PyO3 bindings (the pip wheel). Off by default; maturin enables it.
python = ["dep:pyo3", "dep:pythonize", "dep:serde"]

[dependencies]
nessie-backend-core = { path = "../nessie-backend-core", version = "0.3.1" }
chrono = { workspace = true }
tracing = { workspace = true }
pyo3 = { workspace = true, optional = true, features = ["extension-module", "macros", "abi3-py310"] }
pythonize = { workspace = true, optional = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
nessie-backend-conformance = { path = "../nessie-backend-conformance", version = "0.3.1" }
