[package]
name = "nessie-ontap-protocol"
description = "ONTAP REST wire shapes (HAL, job + error envelopes) and domain->wire mapping for nessie-store."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
python = ["dep:pyo3", "dep:pythonize", "dep:serde_json"]

[dependencies]
nessie-backend-core = { path = "../nessie-backend-core", version = "0.3.1" }
serde = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true, optional = true }
pyo3 = { workspace = true, optional = true, features = ["extension-module", "macros", "abi3-py310"] }
pythonize = { workspace = true, optional = true }

[dev-dependencies]
serde_json = { workspace = true }
uuid = { workspace = true }
