[package]
name = "nessie-store"
description = "The nessie-store daemon — speaks the ONTAP REST API over a pluggable storage backend."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
default-run = "nessie-store"

[[bin]]
name = "nessie-store"
path = "src/main.rs"

[dependencies]
nessie-backend-core = { path = "../nessie-backend-core" }
nessie-backend-mem = { path = "../nessie-backend-mem" }
nessie-backend-zfs = { path = "../nessie-backend-zfs" }
nessie-ontap-protocol = { path = "../nessie-ontap-protocol" }

tokio = { workspace = true }
axum = { workspace = true }
axum-server = { workspace = true }
rustls = { workspace = true }
rcgen = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
axum = { workspace = true }
tower = { workspace = true, features = ["util"] }
uuid = { workspace = true }
nessie-backend-mem = { path = "../nessie-backend-mem" }
nessie-backend-core = { path = "../nessie-backend-core" }
