[package]
name = "nessie-store"
description = "The nessie-store daemon — speaks the ONTAP REST API over a pluggable storage backend."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
default-run = "nessie-store"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "nessie-store"
path = "src/main.rs"
required-features = ["daemon"]

[features]
default = ["daemon"]
# The full ONTAP daemon: HTTP/TLS server, backends, the whole control plane. On
# by default; the binary requires it.
daemon = [
    "dep:nessie-backend-core",
    "dep:nessie-backend-mem",
    "dep:nessie-backend-zfs",
    "dep:nessie-ontap-protocol",
    "dep:nessie-nfs",
    "dep:tokio",
    "dep:axum",
    "dep:axum-server",
    "dep:rustls",
    "dep:rcgen",
    "dep:tower",
    "dep:tower-http",
    "dep:http",
    "dep:clap",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:chrono",
    "dep:base64",
]
# PyO3 bindings (the pip wheel) — only `config` + `identity`. Built with
# `--no-default-features --features python` so the wheel is light (serde/toml/uuid,
# no TLS/HTTP stack) and cross-compiles to every platform. The daemon binary never
# builds with this; only the cdylib wheel does.
python = ["dep:pyo3", "dep:pythonize"]

[dependencies]
# Daemon-only (optional; pulled in by the `daemon` feature).
nessie-backend-core = { path = "../nessie-backend-core", version = "0.2.1", optional = true }
nessie-backend-mem = { path = "../nessie-backend-mem", version = "0.2.1", optional = true }
nessie-backend-zfs = { path = "../nessie-backend-zfs", version = "0.2.1", optional = true }
nessie-ontap-protocol = { path = "../nessie-ontap-protocol", version = "0.2.1", optional = true }
nessie-nfs = { path = "../nessie-nfs", version = "0.2.1", optional = true }
tokio = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
axum-server = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }
rcgen = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
http = { workspace = true, optional = true }
clap = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }

# PyO3 wheel.
pyo3 = { workspace = true, optional = true, features = ["extension-module", "macros", "abi3-py310"] }
pythonize = { workspace = true, optional = true }

# Always present — used by `config` + `identity` (and thus the light wheel).
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
axum = { workspace = true }
tower = { workspace = true, features = ["util"] }
uuid = { workspace = true }
nessie-backend-mem = { path = "../nessie-backend-mem", version = "0.2.1" }
nessie-backend-core = { path = "../nessie-backend-core", version = "0.2.1" }

# --- Linux packaging -------------------------------------------------------
# `.deb` via cargo-deb; `.rpm` via cargo-generate-rpm. Asset source paths are
# relative to this crate's manifest dir, so they reach up to the workspace root
# (../..). The unit is shipped but NOT auto-enabled — run `nessie-store-setup`
# (or `systemctl enable --now nessie-store`) after editing the config.
[package.metadata.deb]
maintainer = "Shawn Hartsock <hartsock@users.noreply.github.com>"
license-file = ["../../LICENSE-APACHE", "0"]
section = "admin"
priority = "optional"
extended-description = "Speaks the NetApp ONTAP REST API over a ZFS backend — a cheap ONTAP on-ramp for home and small business."
depends = "$auto, zfsutils-linux, nfs-kernel-server"
assets = [
    ["../../target/release/nessie-store", "usr/bin/", "755"],
    ["../../scripts/nessie-store-setup.sh", "usr/local/bin/nessie-store-setup", "755"],
    ["../../deploy/nessie-store.service", "lib/systemd/system/nessie-store.service", "644"],
    ["../../deploy/config.example.toml", "usr/share/doc/nessie-store/config.example.toml", "644"],
    ["../../deploy/environment.example", "usr/share/doc/nessie-store/environment.example", "644"],
    ["../../docs/DEPLOY.md", "usr/share/doc/nessie-store/DEPLOY.md", "644"],
]

[package.metadata.generate-rpm]
summary = "ONTAP REST API over ZFS — a cheap ONTAP on-ramp"
assets = [
    { source = "../../target/release/nessie-store", dest = "/usr/bin/nessie-store", mode = "755" },
    { source = "../../scripts/nessie-store-setup.sh", dest = "/usr/local/bin/nessie-store-setup", mode = "755" },
    { source = "../../deploy/nessie-store.service", dest = "/lib/systemd/system/nessie-store.service", mode = "644" },
    { source = "../../deploy/config.example.toml", dest = "/usr/share/doc/nessie-store/config.example.toml", mode = "644" },
    { source = "../../deploy/environment.example", dest = "/usr/share/doc/nessie-store/environment.example", mode = "644" },
    { source = "../../docs/DEPLOY.md", dest = "/usr/share/doc/nessie-store/DEPLOY.md", mode = "644" },
]

[package.metadata.generate-rpm.requires]
zfs = "*"
nfs-utils = "*"
